# SplashScreen

./: README.txt  pyproject.toml  setup.py  version_info.txt
Example/: example.py
Test/: test_splashscreen_ctk.py
splashscreen_ctk/: __init__.py
splashscreen_ctk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
