[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["splashscreen_ctk"]

[project]
name = "splashscreen_ctk"
version = "0.2.1"
authors = [
  { name="DevDolphin7", email="devdolphin7@outlook.com" },
]
description = "Create a splash screen for a software, typically developed in custom tkinter"
readme = "README.txt"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
  "customtkinter",
]

[project.urls]
Homepage = "https://github.com/DevDolphin7/SplashScreen"